--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}
 <title>500 – Server Error</title>
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
 <div class="col-md-10 col-lg-8">
@@ -15,4 +15,4 @@
       </div>
    </section>
 </div>
-{% endblock %}
+{% endblock content %}
