--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,16 @@
    <meta name="description" content="My personal website" />
    <meta name="author" content="Dixon Grossnickle" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   {% block title %}{% endblock %}
+   {% block title %}{% endblock title %}
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Ubuntu:wght@500&display=swap" />
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-   {% block extra_styles %}{% endblock %}
+   {% block extra_styles %}{% endblock extra_styles %}
    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
    <script defer src="{% static 'js/index.js' %}"></script>
-   {% block extra_scripts %}{% endblock %}
+   {% block extra_scripts %}{% endblock extra_scripts %}
    <script defer src="https://kit.fontawesome.com/565e8772bc.js" crossorigin="anonymous"></script>
    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}" />
    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}" />
@@ -59,11 +59,11 @@
       <div class="content-wrap">
          <div class="container">
             <div class="row main-row justify-content-center">
-               {% block content %}{% endblock %}
+               {% block content %}{% endblock content %}
             </div>
          </div>
          <div class="container-fluid p-0">
-            {% block carousel %}{% endblock %}
+            {% block carousel %}{% endblock carousel %}
          </div>
       </div>
       
