--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
    <meta charset="UTF-8" />
    <meta name="description" content="My personal website" />
    <meta name="author" content="Dixon Grossnickle" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
    {% block title %}{% endblock title %}
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Ubuntu:wght@500&display=swap" />
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -62,9 +62,7 @@
                {% block content %}{% endblock content %}
             </div>
          </div>
-         <div class="container-fluid p-0">
-            {% block carousel %}{% endblock carousel %}
-         </div>
+         {% block carousel %}{% endblock carousel %}
       </div>
       
       <!-- Footer -->
