--- a/programs/templates/simulator.html
+++ b/programs/templates/simulator.html
@@ -95,10 +95,10 @@
                         <div class="col team1-name-col">
                            <h5 class="team1-name m-0"></h5>
                         </div>
-                        <div class="col-auto goals1-col text-right p-0">
+                        <div class="col-auto goals1-col p-0">
                            <h5 class="score team1-score m-0"></h5>
                         </div>
-                        <div class="col-auto dash-col text-center">
+                        <div class="col-auto dash-col">
                            <h5 class="score dash m-0">-</h5>
                         </div>
                         <div class="col-auto goals2-col p-0">
