--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>home | dixon grossnickle</title>{% endblock title %}
-{% block extra_styles %}<link rel="stylesheet" href="{% static 'css/home.css' %}" />{% endblock extra_styles %}
+{% block title %}
+<title>home | dixon grossnickle</title>
+{% endblock title %}
+{% block extra_styles %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+{% endblock extra_styles %}
 
 {% block content %}
 <div class="col-md-10 col-lg-8">
@@ -69,5 +73,4 @@
       </div>
    </section>
 </div>
-
 {% endblock content %}
