--- a/programs/templates/simulator.html
+++ b/programs/templates/simulator.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>simulator | dixon grossnickle</title>{% endblock title %}
+{% block title %}
+<title>simulator | dixon grossnickle</title>
+{% endblock title %}
 {% block extra_styles %}
 <link rel="stylesheet" href="{% static 'css/soccer.css' %}" />
 {% endblock extra_styles %}
@@ -24,7 +26,7 @@
 
 {% block carousel %}
 <div class="container-fluid px-0">
-   <div class="football-carousel carousel slide">
+   <div class="carousel slide football-carousel">
       <div class="carousel-inner">
          <div class="form-item carousel-item active">
             <div class="form-container mx-auto">
