--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -14,7 +14,8 @@
          <h1>hello</h1>
          <p class="subtext">
             I'm a senior at UT Austin majoring in MIS. I built this website to learn about full stack web
-            development. Click the icons for more information.
+            development. Click the icons for more information, or go straight to the 
+            <a href="{% url 'sim_home' %}">soccer match simulator</a>.
          </p>
       </div>
    </section>
