Home page under construction

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,7 +13,7 @@
       <div class="container-fluid pb-4 pb-lg-5">
          <h1>hello</h1>
          <p class="subtext">
-            I'm a senior at UT Austin majoring in MIS. I built this website to learn about full stack web
+            I built this site my sophomore year of college to learn about full stack web
             development. Click the icons for more information, or go straight to the 
             <a href="{% url 'sim_home' %}">soccer match simulator</a>.
          </p>
