--- a/programs/templates/simulator.html
+++ b/programs/templates/simulator.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-<title>simulator | dixon grossnickle</title>
+<title>soccer match simulator | dixon grossnickle</title>
 {% endblock title %}
 {% block extra_styles %}
 <link rel="stylesheet" href="{% static 'css/soccer.css' %}" />
@@ -17,7 +17,7 @@
       <div class="container-fluid pb-md-4">
          <h2>soccer match simulator</h2>
          <p class="subtext">
-            Simulate a match between any two teams from Europe's top five leagues (based on 2019-20 season results).
+            Simulate a match between any two teams from Europe's top five leagues (based on 2019-20 season statistics).
          </p>
       </div>
    </section>
