--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                <a href="{% url 'home' %}">
                   <h1 class="navbar-brand mb-0">dixon grossnickle</h1>
                </a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+               {% comment %} <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#contact">contact</a>
                      </li>
                   </ul>
-               </div>
+               </div> {% endcomment %}
             </nav>
          </div>
       </div>
